@@ -1,0 +1,73 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_Menus"></a><span style="text-decoration: underline;">The Menus</span></h2>
+
+
+
+
+
+<br>
+
+
+
+With the <b>RMB</b> in the main view window it is possible to access a set of menus with additional functionality. <br>
+
+
+
+<ul>
+
+
+
+  <li><a href="menus_open.html"><span style="font-weight: bold;">File Open</span></a></li>
+
+
+
+  <li><a href="menus_save.html"><span style="font-weight: bold;">File Save</span></a></li>
+
+
+
+  <li><a href="menus_windows.html"><span style="font-weight: bold;">Windows</span></a></li>
+
+
+
+  <li><a href="menus_view.html"><span style="font-weight: bold;">View</span></a></li>
+
+  <li><a href="menus_image.html"><span style="font-weight: bold;">Image</span></a></li>
+
+
+  <li><a href="menus_audio.html"><span style="font-weight: bold;">Audio</span></a></li>
+
+  <li><a href="menus_pixel.html"><span style="font-weight: bold;">Pixel</span></a></li>
+
+  <li><a href="menus_monitor.html"><span style="font-weight: bold;">Monitor</span></a></li>
+
+
+
+
+</ul>
+
+
+
+</body>
+</html>
