@@ -1,0 +1,45 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_Pixel_Menu"></a><span style="text-decoration: underline;">The Pixel Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="menus_pixel.png" src="images/Menus_Pixel.png" hspace="20">
+
+<br>
+<br>
+The Pixel Menu allows copying the RGBA pixel values of the pixel under the cursor (where the top left of the menu normally appears) to the clipboard.  You can then paste the values in some other application or window.
+<br>
+<br>
+
+
+
+</body>
+</html>
