@@ -1,0 +1,57 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_View"></a><span style="text-decoration: underline;">The View Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="menus_view.png" src="images/Menus_View.png" hspace="20">
+
+<br>
+<br>
+The View Window allows toggling of safe areas for titles and action..
+<br>
+<br>
+The Display Window option allows toggling of the Display Area Window when that differs from the Data Window.  This is a feature of OpenEXR images.
+<br>
+<br>
+The Data Window option allows toggling the square around the data window of OpenEXR images when that window differs from the Display Area Window.
+<br>
+<br>
+The Mask submenu allows toggling on and off film and photographic masks to display your movies in a letterbox format, for example.  This setting works in tandem with the one in the Preferences->View menu.
+<br>
+<br>
+The HUD (Heads Up Display) allows toggling on and off some text information from the view window.  You can display file, path, frame, unshown frames (uf), frames per second (fps), etc.
+<br>
+<br>
+
+
+
+</body>
+</html>
